feat: createUser
